<resources>
    <string name="_false">False</string>
    <string name="_true">True</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_ooni">About OONI</string>
    <string name="about_text_1">The Open Observatory of Network Interference (OONI) is a free software project under The Tor Project that aims to increase transparency of internet censorship around the world.</string>
    <string name="about_text_2">Since 2012, OONI has collected millions of network measurements from around the world, shedding light on multiple instances of internet censorship and traffic manipulation.</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="app_name">ooniprobe</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_all_tests_alert">Do you want to delete all test results?</string>
    <string name="close">Close</string>
    <string name="collector_address">Collector Address</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copied_clipboard">Copied into clipboard</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="correct">Good job! You have answered the quiz correctly.</string>
    <string name="dash">DASH Streaming Test</string>
    <string name="dash_desc">Measure video streaming quality</string>
    <string name="dash_longdesc">"This test emulates a very simple video player streaming at variable quality from a remote server. The test is designed to obtain a baseline performance of your network for performing video streaming.

Disclaimer: This is a third-party performance test based on third-party servers, and we cannot guarantee that your IP address will not be collected, processed, and published."</string>
    <string name="default_web_client_id">951667061699-2aq9bnbot04qdjbed2bpnl9ee4ro0c39.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="dns_injection">DNS Injection</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="facebook_messenger">Facebook Messenger</string>
    <string name="facebook_messenger_desc">Check if Facebook Messenger is blocked</string>
    <string name="facebook_messenger_longdesc">Check if Facebook Messenger is blocked</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="finished_running">finished running</string>
    <string name="finished_tests">Finished tests</string>
    <string name="firebase_database_url">https://ooniprobe-android.firebaseio.com</string>
    <string name="gcm_defaultSenderId">951667061699</string>
    <string name="get_started">Get Started!</string>
    <string name="google_api_key">AIzaSyBsbX_pOQoqlyOOyZ6yf7CJf0lZZn6O1yg</string>
    <string name="google_app_id">1:951667061699:android:12ea7e8f6168b9e2</string>
    <string name="google_crash_reporting_api_key">AIzaSyBsbX_pOQoqlyOOyZ6yf7CJf0lZZn6O1yg</string>
    <string name="google_storage_bucket">ooniprobe-android.appspot.com</string>
    <string name="how_did_i_do">How did I do?</string>
    <string name="http_header_field_manipulation">HTTP Header field manipulation</string>
    <string name="http_header_field_manipulation_desc">"Find 'middle boxes'"</string>
    <string name="http_header_field_manipulation_longdesc">This test tries to detect the presence of systems (“middle boxes”) that could be responsible for censorship or surveillance by sending HTTP requests with non-canonical headers to a backend control server. If such systems are in your network, they will likely normalize the headers or add extra headers.</string>
    <string name="http_invalid_request_line">HTTP Invalid request line</string>
    <string name="http_invalid_request_line_desc">"Find 'middle boxes'"</string>
    <string name="http_invalid_request_line_longdesc">This test tries to detect systems (“middle boxes”) that could be responsible for censorship or surveillance by sending an invalid HTTP request line to an echo service. If such systems are in your network, the invalid HTTP request line will be intercepted and may trigger an error.</string>
    <string name="i_understand_the_risks">I understand the risks.</string>
    <string name="im_all_set">"I'm all set!"</string>
    <string name="include_asn">Include your network info?</string>
    <string name="include_cc">Include your country name?</string>
    <string name="include_ip">Include your IP?</string>
    <string name="invalid_parameter">Invalid parameter</string>
    <string name="laws_text_1">Anyone monitoring your internet activity (e.g. ISP, government, employer) can know that you are running ooniprobe (even though OONI tries to make this hard).</string>
    <string name="laws_text_2">When testing websites for censorship, you will connect to and download data from provocative or objectionable sites (e.g. pornography) that might be illegal in your country.</string>
    <string name="laws_text_3">OONI’s HTTP invalid request line test might trigger the suspicion of your ISP and could be viewed as a form of “hacking”.</string>
    <string name="laws_text_4">Unless you configure your settings otherwise, all data collected from your tests will by default be published by OONI and might include some personally- identifiable information (though OONI tries to prevent this from happening).</string>
    <string name="laws_text_5">The mere use of ooniprobe might be viewed as a form of espionage, regardless of the laws in your country.</string>
    <string name="laws_text_6">To our knowledge, no ooniprobe user has ever faced consequences from the use of our platform. However, many countries have a lengthy history of targeting and abusing digital rights activists, which could leave ooniprobe users subject to severe civil, criminal, or extra-judicial penalties.</string>
    <string name="learn_more">Learn more</string>
    <string name="loading">Loading...</string>
    <string name="local_notifications">Run test automatically</string>
    <string name="local_notifications_text">Time to run tests</string>
    <string name="local_notifications_time">Time</string>
    <string name="max_runtime">Web Connectivity max runtime (seconds)</string>
    <string name="max_runtime_low">The max runtime you have entered is too low, setting to default.</string>
    <string name="ndt">NDT Speed Test</string>
    <string name="ndt_desc">Measure network speed and performance</string>
    <string name="ndt_longdesc">"This test measures the speed and performance of your network.

Disclaimer: This is a third-party performance test based on third-party servers, and we cannot guarantee that your IP address will not be collected, processed, and published."</string>
    <string name="no_result">No results</string>
    <string name="no_result_msg">The test has no results or it was aborted</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="ooniprobe_configured">Successfully configured ooniprobe. You are all set to go!</string>
    <string name="ooniprobe_outdate">ooniprobe is out of date</string>
    <string name="ooniprobe_outdate_msg">In order to run this test you need a newer version of ooniprobe, click on the button below to update</string>
    <string name="open_url_alert">Do you want to open the following URL?</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="pop_quiz">Pop Quiz!</string>
    <string name="potential_risks">Potential risks</string>
    <string name="privacy">Privacy</string>
    <string name="question_1">Question 1: Might anyone monitoring my internet activity (e.g. ISP, government or employer) be able to see that I am running ooniprobe, even though OONI takes precautions to make this hard?</string>
    <string name="question_2">Question 2: Will my measurements by default get published by OONI and might they include personally-identifiable information?</string>
    <string name="risks_text_1">ooniprobe is free and open source software that enables you to examine internet censorship in your network!</string>
    <string name="risks_text_2">By running this app, you can examine whether and how websites are blocked, and whether censorship and/or surveillance systems are present in your network.</string>
    <string name="risks_text_3">You can also run this app to measure the speed and performance of your network.</string>
    <string name="risks_text_4">The data that you can collect through this app can serve as evidence of censorship events .</string>
    <string name="risks_text_5">Since ooniprobe is an investigatory tool and as such, may pose some risks.</string>
    <string name="send_crash">Send crash reports</string>
    <string name="set_up_sharing">Setup Sharing</string>
    <string name="settings_text">"All measurements are sent by default to OONI's measurement collector and automately published through the OONI explorer and OONI's list of measurements."</string>
    <string name="upload_results">Share results publicly?</string>
    <string name="view_data_policy">Click here to view our data policy</string>
    <string name="what_is_ooniprobe">What is ooniprobe?</string>
</resources>