<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/color_off_white" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="38.0sp" android:textStyle="bold" android:textColor="@color/color_ooni_blue" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/set_up_sharing" />
        <TextView android:textSize="15.0sp" android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/settings_text" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_include_ip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="false" android:text="@string/include_ip" android:drawableLeft="@drawable/include_ip" android:drawablePadding="5.0dip" android:drawableStart="@drawable/include_ip" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_include_asn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/include_asn" android:drawableLeft="@drawable/include_asn" android:drawablePadding="5.0dip" android:drawableStart="@drawable/include_asn" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_include_country" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/include_cc" android:drawableLeft="@drawable/include_cc" android:drawablePadding="5.0dip" android:drawableStart="@drawable/include_cc" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_upload_results" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/upload_results" android:drawableLeft="@drawable/upload_results" android:drawablePadding="5.0dip" android:drawableStart="@drawable/upload_results" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/color_off_white" android:id="@id/nextButton" android:background="@drawable/nextbutton" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/im_all_set" android:layout_centerHorizontal="true" app:textAllCaps="false" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>