<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scrollView" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="13.0dip" android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notifications" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/local_notifications" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/local_notifications" android:drawableLeft="@drawable/local_notifications" android:drawablePadding="5.0dip" android:drawableStart="@drawable/local_notifications" />
        <RelativeLayout android:id="@id/local_notifications_timeLayout" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:focusableInTouchMode="true" android:clickable="true" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/color_ooni_blue" android:gravity="center_vertical" android:id="@id/local_notifications_timeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/local_notifications_time" android:drawableLeft="@drawable/local_notifications_time" android:drawablePadding="5.0dip" android:layout_toLeftOf="@id/local_notifications_timeEditText" android:layout_alignBaseline="@id/local_notifications_timeEditText" android:layout_alignBottom="@id/local_notifications_timeEditText" android:layout_alignParentLeft="true" android:drawableStart="@drawable/local_notifications_time" />
            <EditText android:textSize="12.0sp" android:textColor="@color/color_off_black" android:gravity="center_vertical" android:id="@id/local_notifications_timeEditText" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <TextView android:textSize="13.0dip" android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_upload_results" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/upload_results" android:drawableLeft="@drawable/upload_results" android:drawablePadding="5.0dip" android:drawableStart="@drawable/upload_results" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_include_ip" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="false" android:text="@string/include_ip" android:drawableLeft="@drawable/include_ip" android:drawablePadding="5.0dip" android:drawableStart="@drawable/include_ip" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_include_asn" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/include_asn" android:drawableLeft="@drawable/include_asn" android:drawablePadding="5.0dip" android:drawableStart="@drawable/include_asn" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/ck_include_country" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/include_cc" android:drawableLeft="@drawable/include_cc" android:drawablePadding="5.0dip" android:drawableStart="@drawable/include_cc" />
        <android.support.v7.widget.SwitchCompat android:textColor="@color/color_ooni_blue" android:id="@id/send_crash" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:checked="true" android:text="@string/send_crash" android:drawableLeft="@drawable/send_crash" android:drawablePadding="5.0dip" android:drawableStart="@drawable/send_crash" />
        <TextView android:textSize="13.0dip" android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/advanced_settings" />
        <RelativeLayout android:id="@id/max_runtimeLayout" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:focusableInTouchMode="true" android:clickable="true" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/color_ooni_blue" android:gravity="center_vertical" android:id="@id/max_runtimeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/max_runtime" android:drawableLeft="@drawable/max_runtime" android:drawablePadding="5.0dip" android:layout_toLeftOf="@id/max_runtimeEditText" android:layout_alignBaseline="@id/max_runtimeEditText" android:layout_alignBottom="@id/max_runtimeEditText" android:layout_alignParentLeft="true" android:drawableStart="@drawable/max_runtime" />
            <EditText android:textSize="12.0sp" android:textColor="@color/color_off_black" android:gravity="center_vertical" android:id="@id/max_runtimeEditText" android:layout_width="50.0dip" android:layout_height="wrap_content" android:digits="\ 1234567890" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="phone" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>