<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textSize="38.0sp" android:textStyle="bold" android:textColor="@color/color_ooni_blue" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/about_ooni" />
        <TextView android:textSize="15.0sp" android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/about_text_1" />
        <TextView android:textSize="15.0sp" android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/about_text_2" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/color_off_white" android:id="@id/learn_more_button" android:background="@drawable/nextbutton" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/learn_more" android:layout_centerHorizontal="true" app:textAllCaps="false" />
            <android.support.v7.widget.AppCompatButton android:textColor="@color/color_ooni_blue" android:id="@id/privacy_policy_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_data_policy" android:layout_below="@id/learn_more_button" android:layout_centerHorizontal="true" app:textAllCaps="false" />
            <TextView android:textSize="15.0sp" android:textColor="@color/color_off_black" android:id="@id/ooniprobe_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="version" android:layout_below="@id/privacy_policy_button" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>