<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/color_off_white" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="38.0sp" android:textStyle="bold" android:textColor="@color/color_ooni_blue" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/pop_quiz" />
        <TextView android:textColor="@color/color_off_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/question_1" />
        <RadioGroup android:orientation="vertical" android:id="@id/radio_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <RadioButton android:textColor="@color/color_ooni_blue" android:id="@id/answer_1_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/_true" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="8.0dip" android:drawableStart="@drawable/checkbox_selector" />
            <RadioButton android:textColor="@color/color_ooni_blue" android:id="@id/answer_1_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/_false" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="8.0dip" android:drawableStart="@drawable/checkbox_selector" />
        </RadioGroup>
        <TextView android:textColor="@color/color_off_black" android:id="@id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/question_2" />
        <RadioGroup android:orientation="vertical" android:id="@id/radio_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <RadioButton android:textColor="@color/color_ooni_blue" android:id="@id/answer_2_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/_true" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="8.0dip" android:drawableStart="@drawable/checkbox_selector" />
            <RadioButton android:textColor="@color/color_ooni_blue" android:id="@id/answer_2_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/_false" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="8.0dip" android:drawableStart="@drawable/checkbox_selector" />
        </RadioGroup>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/color_off_white" android:id="@id/nextButton" android:background="@drawable/nextbutton" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/how_did_i_do" android:layout_centerHorizontal="true" app:textAllCaps="false" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>